# Http_Server_Client

./: README.md
httpclient/: CMakeLists.txt  main.cpp
httpserver/: CMakeLists.txt  connection.cpp  connection.hpp  connection_manager.cpp  connection_manager.hpp  header.hpp  main.cpp  mime_types.cpp  mime_types.hpp  reply.cpp  reply.hpp  request.hpp  request_handler.cpp  request_handler.hpp  request_parser.cpp  request_parser.hpp  server.cpp  server.hpp
webClient/: CMakeLists.txt  main.cpp  send_res_client.cpp  send_res_client.h
webServer/: CMakeLists.txt  http_server.cpp  http_server.h  main.cpp  memory_pool.h
webserver_modify/: CMakeLists.txt  test_server.cpp
webserver_modify/include/: face_modify_server.h  load_image_form_url.h  server_http.hpp
webserver_modify/src/: face_modify_server.cpp
webserver_new/: CMakeLists.txt  test_client.cpp  test_server.cpp
webserver_new/include/: http_server.h  send_res_client.h
webserver_new/src/: http_server.cpp  send_res_client.cpp
wenServer_with_AVX/: CMakeLists.txt  http_server.cpp  http_server.h  main.cpp  util.cpp  util.h
